# cpplox

./: .clang-format  .clang-tidy  CMakeLists.txt  lox.lox  out  vcpkg.json
cmake/: CompilerWarnings.cmake
src/: AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  Expr.cpp  Expr.h  Lox.cpp  Lox.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  TokenType.cpp  TokenType.h  chunk.cpp  chunk.h  common.h  compiler.cpp  compiler.h  constexpr_map.h  debug.cpp  debug.h  main.cpp  memory.cpp  memory.h  object.cpp  object.h  scanner.cpp  scanner.h  table.cpp  table.h  value.cpp  value.h  vm.cpp  vm.h
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
